--- a/practice/fakedire/p1.html
+++ b/practice/fakedire/p1.html
@@ -4,11 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product List</title>
+ 
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+/>
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-<div class="all">
+
+<div class="container">
+
+
+<div class="row">
+
+<div class="col-md-4">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugiat esse quasi consequatur odio, excepturi laboriosam molestias cum ex porro! Corporis illum doloremque optio neque eos culpa fugit sequi. Blanditiis.
+</div>
+
+
+
+
+</div>
+
+
+
+</div>
+
+<!-- <div class="all">
 <!-- <div class="card">
 
     
@@ -35,7 +63,7 @@
     cont
 </div> -->
 
-</div>
+</div> -->
 
   <!-- <div id="productListContainer"> -->
     <!-- <h1>Product List</h1> -->
@@ -45,41 +73,9 @@
     mujhe bhook lagi hai
   </div> -->
 
-<script>
-  $(document).ready(async function() {
-    try {
-        let res = await fetch('https://fakestoreapi.com/products');
-        let products = await res.json();
-        const productListElement = $('.all');
-        $.each(products, function(index, product) {
-            let card = $('<div>').addClass('card');
 
-            let tit = $('<div>').addClass('title').text(product.title);
-            card.append(tit);
 
-            let pric = $('<div>').addClass('price').text('Price: ' + product.price);
-            card.append(pric);
-
-            let cate = $('<div>').addClass('category').text('Category: ' + product.category);
-            card.append(cate);
-
-            let img = $('<div>').addClass('image');
-            let newimg = $('<img>').attr('src', product.image);
-            img.append(newimg);
-
-            card.append(img);
-
-            productListElement.append(card);
-        });
-    } catch (error) {
-        console.error('Error fetching data:', error);
-        throw error;
-    }
-});
-
-</script>
-
-  <!-- <script src="script.js"></script> -->
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </body>
 </html>
